#3 organize html files into components
-- add material design color variables
-- create sample demo with header and footer

--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -1,4 +1,17 @@
 body {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 18px;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.hidden {
+    display: none!important;
 }
